# MIPSim

./: .gitignore  ALU.cpp  ALU.h  ALUCtl.cpp  ALUCtl.h  ALUOp.cpp  ALUOp.h  Assembler.cpp  Assembler.h  CMakeLists.txt  CPU.cpp  CPU.h  CodeReader.cpp  CodeReader.h  Control.cpp  Control.h  Controller.cpp  Controller.h  DataMemory.cpp  DataMemory.h  Instruction.cpp  Instruction.h  InstructionMemory.cpp  InstructionMemory.h  MIPSInstruction.s  MUL.s  Memory.cpp  Memory.h  PC.cpp  PC.h  RegisterFile.cpp  RegisterFile.h  SignExt.cpp  SignExt.h  StageLatches.cpp  StageLatches.h  StageLatchess.cpp  StageLatchess.h  Stages.cpp  Stages.h  (+5 more)
assembler/: reader.cpp  reader.h
